<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">MovieCatalogue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_movie">Movie</string>
    <string name="title_tvshow">TV Show</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_setting">Setting</string>
    <string name="internet_not_connected">Internet Not Connected!</string>
    <string name="internet_not_connected_message">This app use internet to retrieve data from API. Turn on mobile data ?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error_text">Error Text</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_release_date">Movie Release Date</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="progress_text">Please wait…</string>
    <string name="no_data">No Data Found</string>
    <string name="no_data_message">There is nothing to show because no data found.</string>
    <string name="network_error">Network Error!</string>
    <string name="no_internet_connection">No internet connection, please check your connectivity</string>
    <string name="tv_show_poster">TV Show Poster</string>
    <string name="tv_show_name">TV Show Name</string>
    <string name="search">Search</string>
    <string name="backdrop">Backdrop</string>

    <string name="release_date">Release Date: %1$s</string>
    <string name="vote_count">Vote Count: %1$d</string>
    <string name="vote_average">Vote Average: %1$d</string>
    <string name="popularity">Popularity: %1$d</string>
    <string name="overview">Overview</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="searching">Searching…</string>
    <string name="first_air_date">First Air Date: %1$s</string>
    <string name="added_to_favorite">Added to favorite</string>
    <string name="delete_from_favorite">Delete From Favorite</string>
    <string name="deleted_from_favorite">Deleted from favorite</string>
    <string name="appwidget_text">My Favorite Movie</string>
    <string name="empty_text">No Data</string>
    <string name="language">Language</string>
    <string name="change">Change</string>
    <string name="daily_remainder">Daily Remainder</string>
    <string name="release_remainder">Release Remainder</string>
    <string name="daily_remainder_content">Hey don\'t forget to come back!!!</string>
    <string name="daily_remainder_enabled">Daily Remainder Enabled</string>
    <string name="release_remainder_enabled">Release Remainder Enabled</string>
    <string name="daily_remainder_disabled">Daily Remainder Disabled</string>
    <string name="release_remainder_disabled">Release Remainder Disabled</string>
    <string name="title_release_today">Release Today</string>
</resources>
