<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movie">

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.rizky.submission.last.moviecatalogue.ui.movie.MovieFragment"
        android:label="@string/title_movie"
        tools:layout="@layout/movie_fragment" />

    <fragment
        android:id="@+id/navigation_tvshow"
        android:name="com.rizky.submission.last.moviecatalogue.ui.tvshow.TvShowFragment"
        android:label="@string/title_tvshow"
        tools:layout="@layout/tv_show_fragment" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.rizky.submission.last.moviecatalogue.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_release_today"
        android:name="com.rizky.submission.last.moviecatalogue.ui.release.ReleaseTodayFragment"
        android:label="@string/title_release_today"
        tools:layout="@layout/release_today_fragment" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.rizky.submission.last.moviecatalogue.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />

</navigation>