<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ededed"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.setting.SettingFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:contentPadding="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_language"
                android:text="@string/language"
                android:layout_width="match_parent"
                android:layout_centerVertical="true"
                android:textSize="20sp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btn_change_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/change"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:contentPadding="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_set_reminder"
                android:text="@string/daily_remainder"
                android:layout_width="match_parent"
                android:layout_centerVertical="true"
                android:textSize="20sp"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:id="@+id/checkbox_daily_remainder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:contentPadding="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_release_remainder"
                android:text="@string/release_remainder"
                android:layout_width="match_parent"
                android:layout_centerVertical="true"
                android:textSize="20sp"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:id="@+id/checkbox_release_remainder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>